<resources>

    <string name="app_name">FuzzyLogger 6</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_home">FuzzyLogger 6</string>
    <string name="title_activity_record">Record</string>
    
    <string name="home_btnRecord">Record</string>
    <string name="home_btnView">View</string>
    <string name="home_tvClue">Recent Entries in reverse chronological order:</string>
    <string name="home_tvEmpty">No Recent Items to show</string>
    
    <string name="record_tvChooseRow">Choose a Row</string>
    <string name="record_tvChooseCol">Choose a Column</string>
    <string name="record_btnEditX">Edit</string>
    <string name="record_tvEnterData">Input your Data</string>
    <string name="record_etHint">Type Here...</string>
    <string name="record_btnCommit">Commit</string>
    <string name="record_btnCancel">Cancel</string>
    
    <string name="view_tvFilter">Choose a Keyword</string>
    <string name="view_btnFilter">Filter</string>
    <string name="view_btnReset">Reset</string>
    <string name="view_tvEmpty">No entries meeting keyword.</string>
    
    <string name="list_btnAdd">Add</string>
    <string name="list_defaultText">(default text)</string>
    <string name="list_tvPrompt_row">Existing Rows</string>
    <string name="list_tvPrompt_col">Existing Columns</string>
    <string name="list_etHint_row">Name a new Row here...</string>
    <string name="list_etHint_col">Name a new Column here...</string>
    <string name="list_tvEmpty_row">No Rows to display</string>
    <string name="list_tvEmpty_col">No Columns to display</string>
    <string name="list_strAppTitle_row">Rows List</string>
    <string name="list_strAppTitle_col">Columns List</string>
    <string name="list_menu_Delete">Delete</string>
    <string name="list_menu_Rename">Rename</string>
    <string name="list_alert_Delete_message_row">Warning: All Entries accociated with this Row are about to be permanently deleted. This action cannot be undone! Are you sure you want to continue? </string>
    <string name="list_alert_Delete_message_col">Warning: All Entries accociated with this Column are about to be permanently deleted. This action cannot be undone! Are you sure you want to continue? </string>
    
    <string name="one_defaultText">(default text)</string>
    <string name="one_tvPrompt_row">Renaming the Row:</string>
    <string name="one_tvPrompt_col">Renaming the Column:</string>
    <string name="one_etHint_row">Give a new name here...</string>
    <string name="one_etHint_col">Give a new name here...</string>
    
    <!--
    private static final String tvPrompt_row = "Existing Rows";
	private static final String tvPrompt_col = "Existing Columns";
	private static final String etHint_row = "Name a new Row here...";
	private static final String etHint_col = "Name a new Column here...";
	private static final String tvEmpty_row = "No Rows to display";
	private static final String tvEmpty_col = "No Columns to display";
	private static final String strAppTitle_row = "Rows List";
	private static final String strAppTitle_col = "Columns List";
    -->

</resources>