<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">

    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        
        <Button 
            android:id="@+id/home_btnRecord"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/home_btnRecord"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="home_btnRecord_onClick"
            />
        
        <Button 
            android:id="@+id/home_btnView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/home_btnView"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="home_btnView_onClick"
            />
        
    </LinearLayout>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_tvClue"
        />
    
    <ListView 
        android:id="@android:id/list"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        />
    
    <TextView 
        android:id="@android:id/empty"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/home_tvEmpty"
        />

</LinearLayout>
